PostGIS 2.2.7
2018/xx/xx

 * Bug Fixes *
  - #3965, ST_ClusterKMeans used to lose some clusters on initialization
           (Darafei Praliaskouski)
  - #3978, Fix KNN when upgrading from 2.1 or older (Sandro Santilli)


PostGIS 2.2.6
2017/10/18

 * Bug Fixes *
  - #3786, ptarray null and heap issues on is_closed
  - #3774, Trigonometric length for CompoundCurves
  - #3731, Crash on very small table of homogenous data
  - #2836, Receiving ERROR: ExteriorRing: geom is
           not a polygon with ST_ConcaveHull
  - #3866, Rare crash generating TWKB with large coordinate values
  - #3869, Fix build with "gold" linker
  - #3879, Division by zero in some arc cases
  - #3878, Single defn of signum in header
  - #3880, Undefined behaviour in TYPMOD_GET_SRID
  - #3875, Fix undefined behaviour in shift operation
  - #3874, lw_dist2d_pt_arc division by zero
  - #3882, undefined behaviour in zigzag with negative inputs
  - #3891, undefined behaviour in pointarray_to_encoded_polyline
  - #3895, throw error on malformed WKB input
  - #3907, Allocate enough space for all possible GBOX string outputs (Raúl Marín Rodríguez)


PostGIS 2.2.5
2017/01/29

 * Bug Fixes *
 - #3418, KNN recheck in 9.5+ fails with index returned tuples in wrong order
 - #3680, PostGIS upgrade scripts missing GRANT for views

PostGIS 2.2.4
2016/11/26

 * Bug Fixes *

 - #1973, st_concavehull() returns sometimes empty geometry collection
          Fix from gde
 - #3656, Fix upgrade of aggregates from 2.2 or lower version
 - #3501, add raster constraint max extent exceeds array size limit
        for large tables, change to use ST_Extent
 - #3659, Crash caused by raster GUC define after CREATE EXTENSION
     using wrong memory context. (manaeem)


PostGIS 2.2.3
2016/10/06

 * Bug Fixes *

  - #3615, Fix schema support in RT_CreateOveriew (Cait Smith)
  - #3628, Fix lack of support for capitalized-Y in SwapOrdinates
  - #3524, Add interruptibility to geography brute-force distance 
           calculation